# django-kp-static-version

./: .gitignore  README.rst  setup.cfg
kp_static_version/: README.rst  apps.py
kp_static_version/templatetags/: kp_static.py
