[metadata]
name = django-kp-static-version
version = 0.1
description = kp_static_version is a simple Django app to add a version number to static files and force browsers to use the latest version of the file.
long_description = file: README.rst
url = https://github.com/KernelPan1k/django-kp-static-version
author = kernel-panik
license = GPLv3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: